Revert "Fix moder layout brand visibility issue"
This reverts commit 2c5a70764e2acec60aee65c423bf5c7a7b167430.

--- a/webplugin/css/app/mck-tab-visibility.css
+++ b/webplugin/css/app/mck-tab-visibility.css
@@ -211,11 +211,8 @@
 .layout-modern #mck-sidebox-content .mck-running-on {
   display: none !important;
 }
-.layout-modern #mck-sidebox-content.active-tab-conversations.active-subsection-conversation-individual .mck-running-on.vis, .layout-modern #mck-sidebox-content.is-tab-conversations.is-subsection-conversation-individual .mck-running-on.vis {
+.layout-modern #mck-sidebox-content.active-tab-conversations.active-subsection-conversation-individual .mck-running-on, .layout-modern #mck-sidebox-content.is-tab-conversations.is-subsection-conversation-individual .mck-running-on {
   display: block !important;
-}
-.layout-modern #mck-sidebox-content.active-tab-conversations.active-subsection-conversation-individual .mck-running-on.n-vis, .layout-modern #mck-sidebox-content.is-tab-conversations.is-subsection-conversation-individual .mck-running-on.n-vis {
-  display: none !important;
 }
 .layout-modern #km-faq {
   display: none !important;
